# pnl-mcp

./: .claude_specs.md  .gitignore  .mcp.json  .replit  CLAUDE_DESKTOP_SETUP.md  README.md  SETUP_COMPLETE.md  STREAMLIT_DEPLOY.md  anomaly.txt  claude_desktop_config.json  dashboard.py  packages.txt  pyproject.toml  replit.md  requirements.txt  run-server.bat  workflow.md
.claude/: settings.local.json
.claude/commands/: requirements-current.md  requirements-end.md  requirements-list.md  requirements-remind.md  requirements-start.md  requirements-status.md
attached_assets/: Pasted--PNL-Anomaly-Detection-Complete-Workflow-Log-Overview-This-document-contains-the-complete--1763483685280_1763483685280.txt
data_files/: pnl_data.xlsx
examples/: diff_example.py  enhanced_editor_demo.py
src/pnl_mcp/: __main__.py  code_executor.py  diff_parser.py  enhanced_editor.py  error_handler.py  excel_loader.py  formatters.py  server.py
