[project]
name = "pnl-mcp-server"
version = "0.1.0"
description = "PnL MCP Server for analyzing Endur P&L reports"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.6.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.2",
    "typer>=0.15.1",
    "requests>=2.31.0"
]
[[project.authors]]
name = "pnl-mcp"
email = "pnl@example.com"

[project.scripts]
pnl-mcp-server = "pnl_mcp.__main__:app"
pnlmcpserver = "pnl_mcp.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pnl_mcp"]

[tool.hatch.build]
packages = ["src/pnl_mcp"]
